Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -1,3 +1,4 @@
+
 .main_footer{
     width: 100%;
     height: 100%;
@@ -5,10 +6,10 @@
     justify-content:space-between;
     align-items: center;
 }
-.footer{
-    margin-top: 170px;
+footer{
+    margin-top: 50px;
     padding: 7px 0;
-    background-color: rgb(241, 241, 241);;
+    background-color: rgb(241, 241, 241);
 }
 .pageLinks{
     display:flex;
